tests/parser/error-at-eof-points-at-last-token.stderr
error: expected ';'
 --> $DIR/error-at-eof-points-at-last-token.lox:2:6
  |
2 | 10 + 20
  |      ^^
