tests/parser/error-at-eof-points-at-last-token.lox
// expected ';' after 20, got eof
10 + 20
